--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             <div class="header-text">
                 <p>Frontend Developer</p>
-                <h1>Hi,I'm <span>Chetan</span><br>Patil From India</h1>
+                <h1>Hi,I'm <span>Chetan</span><br>Patil From Pune</h1>
             </div>
         </div>
     </div>
