--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>B.E. E&TC</span><br>CGPA: x.xx</li>
-                            <li><span>12th</span><br>Percentage: xx.xx</li>
-                            <li><span>10th</span><br>Percentage: xx.xx</li>
+                            <li><span>B.E. E&TC</span><br>CGPA: 9.42</li>
+                            <li><span>12th</span><br>Percentage: 75.85</li>
+                            <li><span>10th</span><br>Percentage: 81.80/li>
                         </ul>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                 <div class="layer">
                     <h3>Ecommerce website</h3>
                     <p>Our e-commerce website is designed to provide a seamless online shopping experience for customers. The website is built using HTML, CSS, and JavaScript, ensuring a visually appealing and interactive interface.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+<!--                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
                 </div>
             </div>
             <div class="work">
@@ -125,7 +125,7 @@
                 <div class="layer">
                     <h3>Spotify web</h3>
                     <p>Building a Spotify app using HTML, CSS, and JavaScript would involve creating a web-based application that mimics the functionality and design of the popular music streaming platform, Spotify.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+<!--                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
                 </div>
             </div>
             <div class="work">
@@ -133,7 +133,7 @@
                 <div class="layer">
                     <h3>Travel web</h3>
                     <p>Welcome to our travel website, your ultimate destination for discovering and planning unforgettable journeys. Our website is designed to inspire, inform, and assist travelers in creating their dream vacations.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+<!--                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
                 </div>
             </div>
         </div>
@@ -151,9 +151,9 @@
                 <p><i class="fa-brands fa-whatsapp"></i>9359915709</p>
                 <div class="social-icons">
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://instagram.com/chetan_patilll?igshid=MzNlNGNkZWQ4Mg=="><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://whatsapp.com/dl/"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="http://www.linkedin.com/in/chetanpatil0"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">Download cv</a>
             </div>
