--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                         <ul>
                             <li><span>web development</span><br>Experience in developing responsive designs</li>
                             <li><span>c++</span><br>Experience in solving complex problems</li>
-                            <li><span>_</span><br>_</li>
+                            <li><span>Problem Solving</span><br>Consistency of more than 110 days on leetcode</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
                             <li><span>B.E. E&TC</span><br>CGPA: 9.42</li>
-                            <li><span>12th</span><br>Percentage: 75.85</li>
-                            <li><span>10th</span><br>Percentage: 81.80/li>
+                            <li><span>12th</span><br>Percentage: 75.85%</li>
+                            <li><span>10th</span><br>Percentage: 81.80%</li>
                         </ul>
                     </div>
                 </div>
