Header and About me section modification

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Chetan Patil</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/9a53a2367f.js" crossorigin="anonymous"></script>
 </head>
@@ -26,7 +26,7 @@
             </nav>
 
             <div class="header-text">
-                <p>Frontend Developer</p>
+                <p>Frontend_Developer</p>
                 <h1>Hi,I'm <span>Chetan</span><br>Patil From Pune</h1>
             </div>
         </div>
@@ -51,15 +51,15 @@
 
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>C++</span><br>Solid Foundation of programming language</li>
-                            <li><span>Java</span><br>Fundamental knowledgeof programming language</li>
-                            <li><span>Frontend development</span><br>Designing Web interfaces</li>
+                            <li><span>Programming Language</span><br>[ C++ &nbsp Java &nbsp Javascript ]</li>
+                            <li><span>Required</span><br>[ Git &nbsp Github &nbsp SQL &nbsp DSA ]</li>
+                            <li><span>Frontend development</span><br>Designing Web interfaces [ HTML &nbsp CSS &nbsp JS ]</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>web development</span><br>Experience in developing responsive designs</li>
-                            <li><span>c++</span><br>Experience in solving complex problems</li>
+                            <li><span>c++</span><br>Experience in solving problems</li>
                             <li><span>Problem Solving</span><br>Consistency of more than 150 days on leetcode</li>
                         </ul>
                     </div>
