contact and service field modification

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                     <h2>Web design</h2>
                     <p>Frontend web design is the art and science of creating visually appealing and user-friendly interfaces for websites. It involves the creative and technical process of designing the look, feel, and overall user experience of a website's frontend, which is the part of the website that users interact with directly.
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-sharp fa-solid fa-crop-simple"></i>
                     <h2>Flex Design</h2>
                     <p>Frontend flex design refers to the implementation of flexible layouts using the CSS Flexbox module in frontend web development. Flexbox is a powerful CSS layout model that allows designers and developers to create dynamic and responsive designs with ease.
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="#services">Learn more</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store-ios"></i>
@@ -100,7 +100,7 @@
                     <p>Canva is an innovative online graphic design platform that empowers users to create stunning visual content effortlessly. It provides a user-friendly and intuitive interface, making it accessible to both design professionals and beginners with no design experience.
 
                     </p>
-                    <a href="#">Learn more</a>
+                    <a href="#services">Learn more</a>
                 </div>
             </div>
 
@@ -115,9 +115,9 @@
             <div class="work">
                 <img src="images/work-1.png">
                 <div class="layer">
-                    <h3>Ecommerce website</h3>
-                    <p>Our e-commerce website is designed to provide a seamless online shopping experience for customers. The website is built using HTML, CSS, and JavaScript, ensuring a visually appealing and interactive interface.</p>
-<!--                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
+                    <h3>OTT website</h3>
+                    <p>OTT (over-the-top) is a means of providing television and film content over the internet at the request and to suit the requirements of the individual consumer.</p>
+                    <a href="https://git0chetan.github.io/OTT_Platform/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -125,19 +125,19 @@
                 <div class="layer">
                     <h3>Spotify web</h3>
                     <p>Building a Spotify app using HTML, CSS, and JavaScript would involve creating a web-based application that mimics the functionality and design of the popular music streaming platform, Spotify.</p>
-<!--                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
+                    <a href="https://git0chetan.github.io/Spotify_clone/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/work-3.png">
                 <div class="layer">
-                    <h3>Travel web</h3>
-                    <p>Welcome to our travel website, your ultimate destination for discovering and planning unforgettable journeys. Our website is designed to inspire, inform, and assist travelers in creating their dream vacations.</p>
-<!--                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
+                    <h3>2048 Game</h3>
+                    <p>2048 is played on a 4×4 grid, with numbered tiles that slide smoothly when a player moves them using the four arrow keys. Each time you slide, a new tile will randomly appear in an empty spot on the board. Tiles slide as far as possible in the chosen direction until they are stopped by either another tile or the edge of the grid. </p>
+                    <a href="https://git0chetan.github.io/2048_GAME/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See More</a>
+        <a href="https://github.com/Git0Chetan" class="btn">See More On Github</a>
     </div>
 </div>
 
@@ -147,13 +147,13 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact me</h1>
-                <p><i class="fa-brands fa-facebook"></i>chetan249581@gmail.com</p>
-                <p><i class="fa-brands fa-whatsapp"></i>9359915709</p>
+                <p><i class="fa-regular fa-envelope"></i><a href="mailto: chetan249581@gmail.com" style="color:white; text-decoration:none;" >send me a mail</a></p>
+                <p><i class="fa-solid fa-phone"></i><a href="tel:+919359915709" style="color:white; text-decoration:none;" >click to call</a></p>
                 <div class="social-icons">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://instagram.com/chetan_patilll?igshid=MzNlNGNkZWQ4Mg=="><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://whatsapp.com/dl/"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://github.com/Git0Chetan"><i class="fa-brands fa-github"></i></a>
                     <a href="http://www.linkedin.com/in/chetanpatil0"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://leetcode.com/chetan_coding/"><i class="fa-brands fa-hackerrank"></i></a>
+                    <a href="https://instagram.com/chetan_patilll?igshid=MzNlNGNkZWQ4Mg=="><i class="fa-brands fa-instagram"></i></a>
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">Download cv</a>
             </div>
@@ -212,7 +212,7 @@
                 msg.innerHTML="Message sent Successfully";
                 setTimeout(function(){
                     msg.innerHTML="";
-                },5000)
+                },1000)
                 form.reset();
             })
             .catch(error => console.error('Error!', error.message))
