changes in title and alignment

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                         <ul>
                             <li><span>web development</span><br>Experience in developing responsive designs</li>
                             <li><span>c++</span><br>Experience in solving problems</li>
-                            <li><span>Problem Solving</span><br>Consistency of more than 150 days on leetcode</li>
+                            <li><span>Figma</span><br>Experience in designing</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
                         <ul>
-                            <li><span>B.E. E&TC</span><br>CGPA: 9.42</li>
+                            <li><span>B.E. E&TC</span><br>CGPA: 9.36</li>
                             <li><span>12th</span><br>Percentage: 75.85%</li>
                             <li><span>10th</span><br>Percentage: 81.80%</li>
                         </ul>
@@ -78,21 +78,21 @@
 
     <div id="services">
         <div class="container">
-            <h1 class="sub-title">My Services</h1>
+            <h1 class="sub-title">My Learnings</h1>
             <div class="services-list">
                 <div>
                     <i class="fa-solid fa-code"></i>
                     <h2>Web design</h2>
                     <p>Frontend web design is the art and science of creating visually appealing and user-friendly interfaces for websites. It involves the creative and technical process of designing the look, feel, and overall user experience of a website's frontend, which is the part of the website that users interact with directly.
                     </p>
-                    <a href="#services">Learn more</a>
+                    <a href="#services">website link soon</a>
                 </div>
                 <div>
                     <i class="fa-sharp fa-solid fa-crop-simple"></i>
-                    <h2>Flex Design</h2>
-                    <p>Frontend flex design refers to the implementation of flexible layouts using the CSS Flexbox module in frontend web development. Flexbox is a powerful CSS layout model that allows designers and developers to create dynamic and responsive designs with ease.
+                    <h2>Figma</h2>
+                    <p>Figma is a collaborative design tool used by designers, developers, and other creative professionals to create user interfaces, prototypes, and interactive designs for various platforms such as websites, mobile apps, and more. It's a cloud-based design tool that enables real-time collaboration, allowing multiple team members to work together on the same design project simultaneously, regardless of their physical location.
                     </p>
-                    <a href="#services">Learn more</a>
+                    <a href="#services">figma link soon</a>
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store-ios"></i>
@@ -100,7 +100,7 @@
                     <p>Canva is an innovative online graphic design platform that empowers users to create stunning visual content effortlessly. It provides a user-friendly and intuitive interface, making it accessible to both design professionals and beginners with no design experience.
 
                     </p>
-                    <a href="#services">Learn more</a>
+                    <a href="#services">canva link soon</a>
                 </div>
             </div>
 
@@ -110,7 +110,7 @@
 
 <div id="portfolio">
     <div class="container">
-        <h1 class="sub-title">My Work</h1>
+        <h1 class="sub-title">My Projects</h1>
         <div class="work-list">
             <div class="work">
                 <img src="images/work-1.png">
