Leetcode and github profile added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/9a53a2367f.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- ........................Navbar.......................  -->
     <div id="header">
         <div class="container">
             <nav>
@@ -17,8 +18,8 @@
                 <ul id="sidemenu">
                     <li><a href='#header'>Home</a> </li>
                     <li><a href='#about'>About</a> </li>
-                    <li><a href='#services'>Services</a> </li>
-                    <li><a href='#portfolio'>Portfolio</a> </li>
+                    <li><a href='#services'>Learnings</a> </li>
+                    <li><a href='#portfolio'>Projects</a> </li>
                     <li><a href='#contact'>Contact</a> </li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -74,7 +75,7 @@
             </div>
         </div>
     </div>
-    <!-- .................SERVICES.........................  -->
+<!-- .................SERVICES.........................  -->
 
     <div id="services">
         <div class="container">
@@ -106,6 +107,48 @@
 
         </div>
     </div>
+
+<!-- .................Consistency.........................  -->
+<div id="services">
+    <div class="container">
+        <h1 class="sub-title">My Consistency</h1>
+        <div class="services-list">
+            <div>
+                <i class="fa-solid fa-code"></i>
+                <h2>Leetcode</h2>
+                <p><ul>
+                    <li>Consistency of more than 180+ days</li>
+                    <li>Daily Problem Solving</li>
+                    <li>Continously learning new concepts</li>
+                </ul>
+                </p>
+                <a href="https://leetcode.com/chetan_coding/">click here to visit Leetcode</a>
+            </div>
+            <div>
+                <i class="fa-sharp fa-solid fa-crop-simple"></i>
+                <h2>Github</h2>
+                <p><ul>
+                    <li>more than 200+ contributions</li>
+                    <li>Consistency of more than 60+ days</li>
+                    <li>Created many good repos</li>
+                    <li>Projects source codes available</li>
+                </ul>
+                </p>
+                <a href="https://github.com/Git0Chetan">click here to visit Github</a>
+            </div>
+        </div>
+        <div class="services-list">
+            <div class="a">
+                <img width="100%" src="images/consist/leet_consist.png" alt="">
+            </div>
+            <div class="a">
+                <img width="100%" src="images/consist/consist git.png" alt="">
+            </div>
+
+        </div>
+
+    </div>
+</div>
 <!-- ..........................Portfolio.................................  -->
 
 <div id="portfolio">
@@ -137,7 +180,7 @@
                 </div>
             </div>
         </div>
-        <a href="https://github.com/Git0Chetan" class="btn">See More On Github</a>
+        <a href="https://github.com/Git0Chetan" class="btn">See More Projects On Github</a>
     </div>
 </div>
 
@@ -174,6 +217,9 @@
         <p>copyright  &#169;Chetan<i></i> personal portfolio</p>
     </div>
 </div>
+
+
+<!-- ........................javascript.......................  -->
     <script>
         var tablinks=document.getElementsByClassName("tab-links");
         var tabcontents=document.getElementsByClassName("tab-contents");
