initial change done for Adding projects

--- a/index.html
+++ b/index.html
@@ -183,7 +183,17 @@
         <a href="https://github.com/Git0Chetan" class="btn">See More Projects On Github</a>
     </div>
 </div>
-
+<!-- ........................Projects.......................  -->
+<div class="container">
+    <div class="p">Click here to see Quiz App</div>
+    <div class="p">Click here to see Electric Vehicle </div>
+    <div class="p">Click here to see OTT Platform</div>
+    <div class="p">Click here to see Service web</div>
+    <div class="p">Click here to see 2048</div>
+    <div class="p">Click here to see service website</div>
+    <div class="p"></div>
+    <div class="p"></div>
+</div>
 <!-- ........................Contact.......................  -->
 <div id="contact">
     <div class="container">
