Updated The Details of leetcode,git,education,etc

--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
                             <li><span>Programming Language</span><br>[ C++ &nbsp Java &nbsp Javascript ]</li>
                             <li><span>Required</span><br>[ Git &nbsp Github &nbsp SQL &nbsp DSA ]</li>
                             <li><span>Frontend development</span><br>Designing Web interfaces [ HTML &nbsp CSS &nbsp JS ]</li>
+                            <li><span>Backend development</span><br>[Nodejs &nbsp Express &nbsp SQL]</li>
+                            <li><span>Tools</span><br>[Vscode &nbsp Figma &nbsp Canva &nbsp LucidChart]</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
                             <li><span>web development</span><br>Experience in developing responsive designs</li>
                             <li><span>c++</span><br>Experience in solving problems</li>
-                            <li><span>Figma</span><br>Experience in designing</li>
+                            <li><span>Figma</span><br>Experience in designing UI/UX</li>
+                            <li><span>Embedded</span><br>Created IOT based Modules</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="education">
@@ -117,8 +120,9 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>Leetcode</h2>
                 <p><ul>
-                    <li>Consistency of more than 180+ days</li>
+                    <li>Consistency of more than 240+ days</li>
                     <li>Daily Problem Solving</li>
+                    <li>350+ problems solved</li>
                     <li>Continously learning new concepts</li>
                 </ul>
                 </p>
@@ -128,8 +132,8 @@
                 <i class="fa-sharp fa-solid fa-crop-simple"></i>
                 <h2>Github</h2>
                 <p><ul>
-                    <li>more than 200+ contributions</li>
-                    <li>Consistency of more than 60+ days</li>
+                    <li>more than 400+ contributions</li>
+                    <li>Consistency of more than 100+ days</li>
                     <li>Created many good repos</li>
                     <li>Projects source codes available</li>
                 </ul>
