Created sample additional projects link

--- a/index.html
+++ b/index.html
@@ -178,9 +178,11 @@
             <div class="work">
                 <img src="images/work-3.png">
                 <div class="layer">
-                    <h3>2048 Game</h3>
-                    <p>2048 is played on a 4×4 grid, with numbered tiles that slide smoothly when a player moves them using the four arrow keys. Each time you slide, a new tile will randomly appear in an empty spot on the board. Tiles slide as far as possible in the chosen direction until they are stopped by either another tile or the edge of the grid. </p>
-                    <a href="https://git0chetan.github.io/2048_GAME/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Quote generator</h3>
+                    <p>purely built with the help of html,css and major Vanilla Javascript
+                    application of these web -- generate random quotes -- Author is also Visible --Can directly tweet that quote on the twitter on a single click -- easy to handle --Totally Responsive
+                         </p>
+                    <a href="https://git0chetan.github.io/Quote_Generator/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
@@ -188,16 +190,21 @@
     </div>
 </div>
 <!-- ........................Projects.......................  -->
-<div class="container">
-    <div class="p">Click here to see Quiz App</div>
-    <div class="p">Click here to see Electric Vehicle </div>
-    <div class="p">Click here to see OTT Platform</div>
-    <div class="p">Click here to see Service web</div>
-    <div class="p">Click here to see 2048</div>
-    <div class="p">Click here to see service website</div>
-    <div class="p"></div>
-    <div class="p"></div>
-</div>
+<!-- <div class="container proj">
+    <div class="p">
+        <a href="https://git0chetan.github.io/Electric-vehicle/">Electric Vehicle charging Station</a>
+    </div>
+    <div class="p">
+        <a href="https://git0chetan.github.io/Service_website/">Service Web Application </a>
+    </div>
+    <div class="p">
+        <a href="https://github.com/Git0Chetan/IOT_Projects">IOT ,Embedded Projects</a>
+    </div>
+    <div class="p">
+        <a href="https://git0chetan.github.io/2048_GAME/">2048 Game </a>
+    </div>
+
+</div> -->
 <!-- ........................Contact.......................  -->
 <div id="contact">
     <div class="container">
