Added js file to the portfolio

--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
     </div>
 </div>
 
-
+<script src="app.js"></script>
 <!-- ........................javascript.......................  -->
-    <script>
+    <!-- <script>
         var tablinks=document.getElementsByClassName("tab-links");
         var tabcontents=document.getElementsByClassName("tab-contents");
         function opentab(tabname){
@@ -284,7 +284,7 @@
             })
             .catch(error => console.error('Error!', error.message))
         })
-      </script>
+      </script> -->
     
 </body>
 </html>
